--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PiggyVest | Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./assets/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -17,7 +19,7 @@
                         </div>
                         <div class="card">
                             <div class="card-header text-center">
-                                <h1 class="bold text-blue">Create a Secure Account</h1>
+                                <h1 class="h1 bold text-blue">Create a Secure Account</h1>
                                 <p class="welcome-text text-gray">Welcome to the future of Savings & Investments</p>
                             </div>
                             
@@ -54,7 +56,7 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="info" class="bold">How did you hear about us? (Optional)</label>
+                                        <label for="info" class="bold">How Did You Hear About Us? (Optional)</label>
                                         <div>
                                             <select name="info" id="info">
                                                 <option class="option">Click To Select</option>
