--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="portlet">
                     <div class="portlet-body">
                         <div class="portlet-head">
-                            <a href="https://piggyvest.com"><img src="./assets/piggy_logo1.PNG" alt="PiggyVest Logo" width="200" style="color: green;"></a>
+                            <a href="https://piggyvest.com"><img src="./assets/piggy_logo1.PNG" alt="PiggyVest Logo" width="200" class="w-sm"></a>
                         </div>
                         <div class="card">
                             <div class="card-header text-center">
