--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
                             <div class="card-header text-center">
                                 <h1 class="h1 bold text-blue name"></h1>
                                 <h5 class="courseTag"></h5>
-                                <p class="welcome-text text-gray courses"></p>
+                                <div class="form-group">
+                                    <div>
+                                        <input type="text" name="enterNumbs" class="enterNums" id="enterNums">
+                                    </div>
+                                </div>
                             </div>
                             <div class="card-body">
                                 <form>
